--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   </style>
 </head>
 <body>
-<p class="p1"><span class="s1">Hello World Now Fucking Work</span></p>
+<p class="p1"><span class="s1">HELLO INTERNET I HOPE I AM WELCOME HERE!!!1!!</span></p>
 </body>
 </html>
