--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 </head>
 <body>
 <p class="p1"><span class="s1">HELLO INTERNET I HOPE I AM WELCOME HERE!!!1!!</span></p>
-<p>btw you should definitely add my cydia repo</p>
+<p>btw you should definitely add my cydia repo: herobrinemodder.github.io</p>
 </body>
 </html>
