--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 </head>
 <body>
 <p class="p1"><span class="s1">HELLO INTERNET I HOPE I AM WELCOME HERE!!!1!!</span></p>
-<p>btw you should definitely add my cydia repo: herobrinemodder.github.io</p>
-<p>btw if you see a minecraft username called tommo808 kill him instantly</p>
+<p>This site currently doesn't have anything interesting, pretty much mainly for my cydia repo</p>
+<p>To add my cydia repo, simply add it like any other repo (hopefully you know how to do that)</p>
+<p>URL is the same as this webpage address: herobrinemodder.github.io</p>
+
+
+<p>btw if you see a minecraft username called tommo808 make sure you kill him if possible</p>
 </body>
 </html>
