--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <p>This site currently doesn't have anything interesting, pretty much mainly for my cydia repo</p>
 <p>To add my cydia repo, simply add it like any other repo (hopefully you know how to do that)</p>
 <p>URL is the same as this webpage address: herobrinemodder.github.io</p>
-
+<p>I'm currently making a tutorial on how to make mods for mcpe for ios. You can find it <a href="how2mod.html">here<a/> however I haven't finished it yet</p>
 
 <p>btw if you see a minecraft username called tommo808 make sure you kill him if possible</p>
 </body>
