--- a/mcpemodder.html
+++ b/mcpemodder.html
@@ -12,7 +12,8 @@
   </style>
 </head>
 <body>
-    <p><h2>CHANGELOG for 0.2</h2><br>added mod uninstaller</br><br>fixed layout in landscape on iPads</br><br>fixed navigation bar</br></p>
+    <p><h2>CHANGELOG for 0.3</h2><br>added dependance for firmware 8.0 or greater</br><br>This app will only work on iOS 8 because it uses iOS 8-only apis</br><br>If you want to use this app, you would need to update to iOS 8</br></p>
+    
 
 </body>
 </html>
