--- a/sneaking.html
+++ b/sneaking.html
@@ -12,7 +12,8 @@
   </style>
 </head>
 <body>
-    <p><h2>CHANGELOG for 0.3</h2><br></br></p>
+    <p><h2>CHANGELOG for 0.2-2</h2><br>added commands to enable and disable sneaking (/sneak on and /sneak off)</br
+    <br>To enable this, go into settings app</br></p>
     
 
 </body>
