--- a/how2mod.html
+++ b/how2mod.html
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-<p>This tutorial is still w.i.p, and might change majorly once MCPE 0.10.5 is released</p>
+<p>This tutorial is still w.i.p, and might change once MCPE 0.10.5 is released</p>
 <br></br>
 <p>Modding on iOS is completly different from modding on Android. Most mods on Android uses a javascript api called ModPE. iOS had this before when MCPE 0.7.2 was released. However, that changed when Mojang removed the stuff that modders needed in order to mod, which was in 0.7.3. Modding was still possible, but it required alot of effort to find the function names and addresses, and the addresses change every version, so that would require even more effort updating mods.
 
@@ -21,8 +21,7 @@
 Currently, you can mod MCPE for iOS with substrate, mostly known as Cydia Substrate
 <br></br>
 This tutorial will use my newly made app to compile and install mods on-device. You can find my app on my new repo
-<br></br>
-<img src="package.png" alt="MCPE Modder package" ></p>
+<br></br></p>
 
 </body>
 </html>
