--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 <body>
 <p class="p1"><span class="s1">HELLO INTERNET I HOPE I AM WELCOME HERE!!!1!!</span></p>
 <p>This site currently doesn't have anything interesting, pretty much mainly for my cydia repo</p>
+<p>I'm too lazy to make this a cool site :p</p>
 <p>To add my cydia repo, simply add it like any other repo (hopefully you know how to do that)</p>
 <p>URL is the same as this webpage address: herobrinemodder.github.io</p>
+<p>I made a mod for Minecraft PC 1.7.10 that causes bats to attack. You can find it <a href="dangerousbats.zip">here</a></p>
 
 <p>btw if you see a minecraft username called tommo808 make sure you kill him if possible</p>
 </body>
