updated mcpe modder

--- a/mcpemodder.html
+++ b/mcpemodder.html
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-    <p><h2>CHANGELOG for 0.4</h2><br>Can now compile mods for arm64</br><br>This app will only work on iOS 8 because it uses iOS 8-only apis</br><br>If you want to use this app, you would need to update to iOS 8</br></p>
+    <p><h2>CHANGELOG for 0.5</h2><br>Added support for iOS 7 and below</br><br>Added a help section for future updates</br><br>Removed "kill mcpe" button. No longer needed</br></p>
     
 
 </body>
