updated mcpe modder

--- a/mcpemodder.html
+++ b/mcpemodder.html
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-    <p><h2>CHANGELOG for 0.5</h2><br>Added support for iOS 7 and below</br><br>Added a help section for future updates</br><br>Removed "kill mcpe" button. No longer needed</br></p>
+    <p><h2>CHANGELOG for 0.6</h2><br>Fixed app not loading properly on iPods and (possibly) iPhones</br><br>Added support for iOS 7 and below</br><br>Added a help section for future updates</br><br>Removed "kill mcpe" button. No longer needed</br></p>
     
 
 </body>
