updated mcpemodder, added sdkinstall

--- a/mcpemodder.html
+++ b/mcpemodder.html
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-    <p><h2>CHANGELOG for 0.6</h2><br>Fixed app not loading properly on iPods and (possibly) iPhones</br><br>Added support for iOS 7 and below</br><br>Added a help section for future updates</br><br>Removed "kill mcpe" button. No longer needed</br></p>
+    <p><h2>CHANGELOG for 0.7</h2><br>Added a new example mod called Bigger inventory</br><br>Added alert if user is below iOS 8</br><br>Switched from devkit to iOS SDK</br><br>Once app is installed, please run "sdkinstall" (without quotes) in a terminal app such as mobile terminal</br></p>
     
 
 </body>
