--- a/mcpemodder.html
+++ b/mcpemodder.html
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-    <p><h2>CHANGELOG for 0.7</h2><br>Added a new example mod called Bigger inventory</br><br>Added alert if user is below iOS 8</br><br>Switched from devkit to iOS SDK</br><br>Once app is installed, please run "sdkinstall" (without quotes) in a terminal app such as mobile terminal</br></p>
+    <p><h2>CHANGELOG for 0.8</h2><br>Added a custom option when generating mods. You can now name your mods</br><br>Fixed some crashes when trying to compile</br><br>Switched from devkit to iOS SDK</br><br>Once app is installed, please run "sdkinstall" (without quotes) in a terminal app such as mobile terminal</br></p>
     
 
 </body>
